--- a/input.html
+++ b/input.html
@@ -245,6 +245,7 @@
             <!-- ends here  -->
         </div>
     </section>
+    <section></section>
     <!-- ends here  -->
 </body>
 </html>
