--- a/inabout.html
+++ b/inabout.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="asssets/bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="asssets/bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap.css"> -->
     <link rel="stylesheet" href="fontawesome-free-6.2.0-web/fontawesome-free-6.2.0-web/css/all.css">
     <link rel="stylesheet" href="input.css">
 </head>
@@ -15,74 +15,72 @@
     <!-- homepage goes here  -->
     <section>
         <div class="container-fluid bg-[url('/images/bg-dark.jpg')] bg-cover bg-fixed min-h-screen py-5">
-            <!-- navbar goes here  -->
-            <div class="navheader mx-auto lg:flex flex-wrap lg:items-center">
-                <div class="logo">
-                    <span>
-                        <img src="images/logo (1).png" alt="" class="xl:mx-5 md:text-center flex items-center mb-3">
-                    </span>
-                </div>
-                <ul class="flex flex-wrap gap-4 ml-auto">
-                    <li
-                        class="list-none h-12 w-28  bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded flex items-center justify-center">
-                        <a href="./index.html" class="decoration-transparent">
-                            <i class="fas fa-home lead text-white"></i>
-                            <span class="ml-2 text-white">Home</span>
-                        </a>
-                    </li>
-
-                    <li
-                        class="list-none h-12 w-28  bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-                        <a href="./input.html" class="decoration-transparent">
-                            <i class="fas fa-user lead text-white"></i>
-                            <span class="ml-2 text-white">About</span>
-                        </a>
-                    </li>
-
-                    <li
-                        class="list-none h-12 w-28 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-                        <a href="#" class="decoration-transparent">
-                            <i class="fas fa-file-lines lead  text-white"></i>
-                            <span class="ml-2 text-white">Resume</span>
-                        </a>
-                    </li>
-
-                    <li
-                        class="list-none h-12 w-28 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-                        <a href="#" class="decoration-transparent">
-                            <i class="fas fa-briefcase lead text-white"></i>
-                            <span class="ml-2 text-white">Works</span>
-                        </a>
-                    </li>
-
-                    <li
-                        class="list-none h-12 w-28 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-                        <a href="#" class="decoration-transparent">
-                            <i class="fab fa-blogger lead  text-white"></i>
-                            <span class="ml-2 text-white">BLogs</span>
-                        </a>
-                    </li>
-
-                    <li
-                        class="list-none h-12 w-28 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-                        <a href="#" class="decoration-transparent">
-                            <i class="fas fa-address-book lead  text-white"></i>
-                            <span class="ml-2 text-white">Contact</span>
-                        </a>
-                    </li>
-
-                    <li
-                        class="list-none h-12 w-12 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-                        <a href="#" class="decoration-transparent">
-                            <i class="fas fa-sun lead text-white"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <!-- ends here  -->
+            <div class="container m-auto mt-6 rounded-tl-2xl rounded-tr-2xl">
+                <!-- navbar goes here  -->
+        <div class="navheader mx-auto lg:flex flex-wrap lg:items-center ">
+          <div class="logo">
+            <span>
+              <img src="images/logo (1).png" alt="" class="xl:mx-5 md:text-center flex items-center mb-3">
+            </span>
+          </div>
+          <ul class="flex flex-wrap gap-4 ml-auto">
+            <li class="list-none h-12 w-28 active bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+              <a href="./index.html" class="decoration-transparent">
+                <i class="fas fa-home lead text-white"></i>
+                <span class="ml-2 text-white">Home</span>
+              </a>
+            </li>
+  
+            <li
+              class="list-none h-12 w-28  bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+              <a href="./inabout.html" class="decoration-transparent">
+                <i class="fas fa-user lead text-white"></i>
+                <span class="ml-2 text-white">About</span>
+              </a>
+            </li>
+  
+            <li
+              class="list-none h-12 w-28  bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] flex items-center justify-center rounded-[5px]">
+              <a href="./inrusume.html" class="decoration-transparent">
+                <i class="fas fa-file-lines lead  text-white"></i>
+                <span class="ml-2 text-white">Resume</span>
+              </a>
+            </li>
+  
+            <li
+              class="list-none h-12 w-28 bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+              <a href="#" class="decoration-transparent">
+                <i class="fas fa-briefcase lead text-white"></i>
+                <span class="ml-2 text-white">Works</span>
+              </a>
+            </li>
+  
+            <li
+              class="list-none h-12 w-28 bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+              <a href="#" class="decoration-transparent">
+                <i class="fab fa-blogger lead  text-white"></i>
+                <span class="ml-2 text-white">BLogs</span>
+              </a>
+            </li>
+  
+            <li
+              class="list-none h-12 w-28 bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+              <a href="./incontact.html" class="decoration-transparent">
+                <i class="fas fa-address-book lead  text-white"></i>
+                <span class="ml-2 text-white">Contact</span>
+              </a>
+            </li>
+  
+            <li class="list-none h-12 w-12 bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-full flex items-center justify-center">
+              <a href="#" class="decoration-transparent">
+              <i class="fas fa-sun lead text-white"></i>
+            </a></li>
+          </ul>
+        </div>
+               <!-- navbar ends here  ends here  -->
             <!-- about goes here  -->
-            <div class="container bg-[#111111] rounded-2xl md:px-4 lg:px-20 mt-14 lg:p-20">
-                <div class="heading lg:pl-8 py-14">
+            <div class="container bg-[#111111] m-auto mt-12 p-5 rounded-tl-2xl rounded-tr-2xl">
+                <div class="heading lg:pl-8 py-8">
                     <h1 class="text-white lg:text-5xl text-3xl border-b-2 lg:w-1/3 border-[#e53048]">About Me</h1>
                 </div>
                 <!-- who iam goes here  -->
@@ -167,68 +165,68 @@
                 <div class="mt-5 md:ml-10">
                     <h1 class="text-white text-[40px] font-medium ">What i do!</h1>
                     <div class="body1-contain mt-5 lg:flex  justify-around gap-10">
-                        <div class="uiux border border-secondary rounded  p-4 mt-4">
+                        <div class="uiux border-2 border-[#424141] rounded  p-4 mt-4">
                             <div class="heading flex ">
                                 <img src="images/icon.svg" alt="">
                                 <h1 class="text-white sm:text-2xl text-xl ml-5 font-semibold">Ui/Ux Design</h1>
                             </div>
-                            <div class="text ml-16 text-justify mt-3 text-secondary">
+                            <div class="text ml-16 text-justify mt-3 text-gray-400">
                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam euismod volutpat.
                                 </p>
                             </div>
                         </div>
 
-                        <div class="appdevelopment border border-secondary rounded p-4 mt-4">
+                        <div class="appdevelopment border-2 border-[#424141] rounded p-4 mt-4">
                             <div class="heading flex">
                                 <img src="images/appdeve.svg" alt="">
                                 <h1 class="text-white sm:text-2xl text-xl ml-5 font-semibold">App Developmemt</h1>
                             </div>
-                            <div class="text ml-16 text-justify mt-3 text-secondary">
+                            <div class="text ml-16 text-justify mt-3 text-gray-400">
                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam euismod volutpat.
                                 </p>
                             </div>
                         </div>
 
-                        <div class="photography1 border border-secondary rounded mt-4 p-4 ">
+                        <div class="photography1 border-2 border-[#424141] rounded mt-4 p-4 ">
                             <div class="heading flex">
                                 <img src="images/img.svg" alt="">
                                 <h1 class="text-white sm:text-2xl text-xl ml-5 font-semibold">Photography</h1>
                             </div>
-                            <div class="text ml-16 text-justify mt-3 text-secondary">
+                            <div class="text ml-16 text-justify mt-3 text-gray-400">
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque temporibus eligendi
                                     quos </p>
                             </div>
                         </div>
                     </div>
                     <div class="body1-contain mt-5 lg:flex justify-around gap-10">
-                        <div class="photography1 border border-secondary rounded mt-4 p-4">
+                        <div class="photography1 border-2 border-[#424141] rounded mt-4 p-4">
                             <div class="heading flex">
                                 <img src="images/photogra.svg" alt="">
                                 <h1 class="text-white sm:text-2xl text-xl ml-5 font-semibold">Photography</h1>
                             </div>
-                            <div class="text ml-16 text-justify mt-3 text-secondary">
+                            <div class="text ml-16 text-justify mt-3 text-gray-400">
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque temporibus eligendi
                                     quos </p>
                             </div>
                         </div>
 
-                        <div class="management border border-secondary rounded mt-4 p-4">
+                        <div class="management border-2 border-[#424141] rounded mt-4 p-4">
                             <div class="heading flex">
                                 <img src="images/sett.svg" alt="">
                                 <h1 class="text-white sm:text-2xl text-xl ml-5 font-semibold">Management</h1>
                             </div>
-                            <div class="text ml-16 text-justify mt-3 text-secondary">
+                            <div class="text ml-16 text-justify mt-3 text-gray-400">
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque temporibus eligendi
                                     quos </p>
                             </div>
                         </div>
 
-                        <div class="Web develoment border border-secondary rounded mt-4 p-4">
+                        <div class="Web develoment border-2 border-[#424141] rounded mt-4 p-5">
                             <div class="heading flex">
                                 <img src="images/code.svg" alt="">
                                 <h1 class="text-white sm:text-2xl text-xl ml-5 font-semibold">Web Development</h1>
                             </div>
-                            <div class="text ml-16 text-justify mt-3 text-secondary">
+                            <div class="text ml-16 text-justify mt-3 text-gray-400">
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque temporibus eligendi
                                     quos </p>
                             </div>
@@ -236,16 +234,17 @@
                     </div>
                 </div>
                 <!-- ends here  -->
-                <!-- rights goes here  -->
-                <div class="text text-center sm:p-5 bg-zinc-900 rounded-xl mt-5">
-                    <p class=" font-semibold text-slate-400"><i class="fas fa-copyright"></i> 2022 All Rights Reserved By ib-themes</p>
-                </div>
-                <!-- ends here  -->
             </div>
             <!-- ends here  -->
+             <!-- rights goes here  -->
+        <div class="text text-center sm:p-5 bg-zinc-900 rounded-bl-2xl rounded-br-2xl">
+            <p class=" font-semibold text-slate-400"><i class="fas fa-copyright"></i> 2022 All Rights Reserved By
+              ib-themes</p>
+          </div>
+          <!-- ends here  -->
+        </div>
         </div>
     </section>
-    <section></section>
     <!-- ends here  -->
 </body>
 </html>
