--- a/index.html
+++ b/index.html
@@ -4,89 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>index</title>
     <link rel="stylesheet" href="../input.css">
-    <link rel="stylesheet" href="asssets/bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="asssets/bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap.css"> -->
     <link rel="stylesheet" href="fontawesome-free-6.2.0-web/fontawesome-free-6.2.0-web/css/all.css">
 </head>
 <body>
       <!-- homepage goes here  -->
   <section>
     <div class="container-fluid bg-[url('/images/bg-dark.jpg')] bg-cover min-h-screen py-5 bg-fixed">
-      <!-- navbar goes here  -->
-      <div class="navheader mx-auto lg:flex flex-wrap lg:items-center">
-        <div class="logo">
-          <span>
-            <img src="images/logo (1).png" alt="" class="xl:mx-5 md:text-center flex items-center mb-3">
-          </span>
-        </div>
-        <ul class="flex flex-wrap gap-4 ml-auto">
-          <li class="list-none h-12 w-28 active bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded flex items-center justify-center">
-            <a href="#" class="decoration-transparent">
-              <i class="fas fa-home lead text-white"></i>
-              <span class="ml-2 text-white">Home</span>
-            </a>
-          </li>
+      <div class="container m-auto mt-6">
+        <!-- navbar goes here  -->
+<div class="navheader mx-auto lg:flex flex-wrap lg:items-center ">
+  <div class="logo">
+    <span>
+      <img src="images/logo (1).png" alt="" class="xl:mx-5 md:text-center flex items-center mb-3">
+    </span>
+  </div>
+  <ul class="flex flex-wrap gap-4 ml-auto">
+    <li class="list-none h-12 w-28 active bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+      <a href="./index.html" class="decoration-transparent">
+        <i class="fas fa-home lead text-white"></i>
+        <span class="ml-2 text-white">Home</span>
+      </a>
+    </li>
 
-          <li
-            class="list-none h-12 w-28  bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-            <a href="./input.html" class="decoration-transparent">
-              <i class="fas fa-user lead text-white"></i>
-              <span class="ml-2 text-white">About</span>
-            </a>
-          </li>
+    <li
+      class="list-none h-12 w-28  bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+      <a href="./inabout.html" class="decoration-transparent">
+        <i class="fas fa-user lead text-white"></i>
+        <span class="ml-2 text-white">About</span>
+      </a>
+    </li>
 
-          <li
-            class="list-none h-12 w-28 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-            <a href="#" class="decoration-transparent">
-              <i class="fas fa-file-lines lead  text-white"></i>
-              <span class="ml-2 text-white">Resume</span>
-            </a>
-          </li>
+    <li
+      class="list-none h-12 w-28  bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] flex items-center justify-center rounded-[5px]">
+      <a href="./inrusume.html" class="decoration-transparent">
+        <i class="fas fa-file-lines lead  text-white"></i>
+        <span class="ml-2 text-white">Resume</span>
+      </a>
+    </li>
 
-          <li
-            class="list-none h-12 w-28 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-            <a href="#" class="decoration-transparent">
-              <i class="fas fa-briefcase lead text-white"></i>
-              <span class="ml-2 text-white">Works</span>
-            </a>
-          </li>
+    <li
+      class="list-none h-12 w-28 bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+      <a href="#" class="decoration-transparent">
+        <i class="fas fa-briefcase lead text-white"></i>
+        <span class="ml-2 text-white">Works</span>
+      </a>
+    </li>
 
-          <li
-            class="list-none h-12 w-28 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-            <a href="#" class="decoration-transparent">
-              <i class="fab fa-blogger lead  text-white"></i>
-              <span class="ml-2 text-white">BLogs</span>
-            </a>
-          </li>
+    <li
+      class="list-none h-12 w-28 bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+      <a href="#" class="decoration-transparent">
+        <i class="fab fa-blogger lead  text-white"></i>
+        <span class="ml-2 text-white">BLogs</span>
+      </a>
+    </li>
 
-          <li
-            class="list-none h-12 w-28 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-            <a href="#" class="decoration-transparent">
-              <i class="fas fa-address-book lead  text-white"></i>
-              <span class="ml-2 text-white">Contact</span>
-            </a>
-          </li>
+    <li
+      class="list-none h-12 w-28 bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-[5px] flex items-center justify-center">
+      <a href="./incontact.html" class="decoration-transparent">
+        <i class="fas fa-address-book lead  text-white"></i>
+        <span class="ml-2 text-white">Contact</span>
+      </a>
+    </li>
 
-          <li class="list-none h-12 w-12 bg-dark border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded  flex items-center justify-center">
-            <a href="#" class="decoration-transparent">
-            <i class="fas fa-sun lead text-white"></i>
-          </a></li>
-        </ul>
-      </div>
-      <!-- ends here  -->
+    <li class="list-none h-12 w-12 bg-[#212425] border-0 hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] rounded-full flex items-center justify-center">
+      <a href="#" class="decoration-transparent">
+      <i class="fas fa-sun lead text-white"></i>
+    </a></li>
+  </ul>
+</div>
+ </div>
+       <!-- ends here  -->
       <!-- header second section goes here  -->
-      <div class="container py-4">
-        <div class="image-text flex flex-col items-center">
-          <img src="images/pi1.jpg" alt="" class="lg:w-[300px] lg:h-[300px] 2xl:w-[350px] 2xl:h-[350px] sm:w-[250px] sm:h-[250px] rounded-full">
+        <div class="home-body mt-8 image-text flex flex-col items-center ">
+          <img src="images/pi1.jpg" alt="" class="lg:w-[250px] lg:h-[250px] 2xl:w-[350px] 2xl:h-[350px] sm:w-[200px] sm:h-[200px] rounded-full">
           <h1 class="text-white lg:text-4xl font-semibold lg:mt-6 mb-1 ">Monalisa Ashley</h1>
           <p class="text-[#7b7b7b]">Ux/Ui Designer</p>
-          <div class="social-icons">
+          <div class="social-icons mt-3">
 
-            <i class="fab fa-facebook-f h-[36px] w-[36px] bg-[#212425] text-center p-2  text-[#1773ea]  hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] hover:text-white rounded mx-1"></i>
-
+            <i class="fab fa-facebook-f h-[36px] dw-[36px] bg-[#212425] text-center p-2  text-[#1773ea]  hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] hover:text-white rounded mx-1"></i>
+            
             <i class="fab fa-twitter h-[36px] w-[36px] bg-[#212425] text-center p-2  text-[#1773ea] hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] hover:text-white  rounded mx-1"></i>
-
+            
             <i class="fab fa-dribbble h-[36px] w-[36px] bg-[#212425] text-center p-2  text-[#1773ea] hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] hover:text-white  rounded mx-1"></i>
 
             <i class="fab fa-linkedin-in h-[36px] w-[36px] bg-[#212425] text-center p-2    text-[#1773ea]  hover:bg-gradient-to-tr from-[#e53048] to-[#dd205f] hover:text-white rounded mx-1"></i>
@@ -98,10 +99,11 @@
             </button>
           </div>
         </div>      
-      </div>
       <!-- ends here  -->
     </div>
   </section>
   <!-- ends here  -->
+  <!-- linking of javascript goes here  -->
+  <script src="index.js"></script>
 </body>
 </html>
